--- a/1D_World.ipynb
+++ b/1D_World.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Reproduce the following program:\n",
-    "https://morvanzhou.github.io/tutorials/machine-learning/reinforcement-learning/2-1-general-rl/"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -26,26 +16,27 @@
     "\n",
     "np.random.seed(2)  # reproducible\n",
     "\n",
-    "N_STATES = 10   # 1维世界的宽度\n",
-    "ACTIONS = ['left', 'right']     # 探索者的可用动作\n",
-    "EPSILON = 0.9   # 贪婪度 greedy\n",
-    "ALPHA = 0.1     # 学习率\n",
-    "GAMMA = 0.9    # 奖励递减值\n",
-    "MAX_EPISODES = 13   # 最大回合数\n",
-    "FRESH_TIME = 0.3    # 移动间隔时间"
+    "N_STATES = 10 \n",
+    "ACTIONS = ['left', 'right']  \n",
+    "EPSILON = 0.9 \n",
+    "ALPHA = 0.1 \n",
+    "GAMMA = 0.9 \n",
+    "MAX_EPISODES = 13\n",
+    "FRESH_TIME = 0.3 "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Q 表\n",
     "def build_q_table(n_states, actions):\n",
     "    table = pd.DataFrame(\n",
-    "        np.zeros((n_states, len(actions))),     # q_table 全 0 初始\n",
-    "        columns=actions,    # columns 对应的是行为名称\n",
+    "        np.zeros((n_states, len(actions))), \n",
+    "        columns=actions,\n",
     "    )\n",
     "    return table"
    ]
@@ -72,13 +63,12 @@
    },
    "outputs": [],
    "source": [
-    "# 在某个 state 地点, 选择行为\n",
     "def choose_action(state, q_table):\n",
-    "    state_actions = q_table.iloc[state, :]  # 选出这个 state 的所有 action 值\n",
-    "    if (np.random.uniform() > EPSILON) or (state_actions.all() == 0):  # 非贪婪 or 或者这个 state 还没有探索过\n",
+    "    state_actions = q_table.iloc[state, :]  \n",
+    "    if (np.random.uniform() > EPSILON) or (state_actions.all() == 0):\n",
     "        action_name = np.random.choice(ACTIONS)\n",
     "    else:\n",
-    "        action_name = state_actions.argmax()    # 贪婪模式\n",
+    "        action_name = state_actions.argmax()\n",
     "    return action_name"
    ]
   },
@@ -90,7 +80,7 @@
    },
    "outputs": [],
    "source": [
-    "# 环境反馈 S_, R\n",
+    "\n",
     "def get_env_feedback(S, A):\n",
     "    # This is how agent will interact with the environment\n",
     "    if A == 'right':    # move right\n",
@@ -112,13 +102,15 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# 环境更新\n",
+    "\n",
     "def update_env(S, episode, step_counter):\n",
     "    # This is how environment be updated\n",
-    "    env_list = ['-']*(N_STATES-1) + ['T']   # '---------T' our environment\n",
+    "    env_list = ['-']*(N_STATES-1) + ['T'] \n",
     "    if S == 'terminal':\n",
     "        interaction = 'Episode %s: total_steps = %s' % (episode+1, step_counter)\n",
     "        print('\\r{}'.format(interaction), end='')\n",
@@ -139,29 +131,29 @@
    },
    "outputs": [],
    "source": [
-    "# 强化学习主循环\n",
+    "\n",
     "def rl():\n",
-    "    q_table = build_q_table(N_STATES, ACTIONS)  # 初始 q table\n",
-    "    for episode in range(MAX_EPISODES):     # 回合\n",
+    "    q_table = build_q_table(N_STATES, ACTIONS) \n",
+    "    for episode in range(MAX_EPISODES):  \n",
     "        step_counter = 0\n",
-    "        S = 0   # 回合初始位置\n",
-    "        is_terminated = False   # 是否回合结束\n",
-    "        update_env(S, episode, step_counter)    # 环境更新\n",
+    "        S = 0 \n",
+    "        is_terminated = False  \n",
+    "        update_env(S, episode, step_counter)  \n",
     "        while not is_terminated:\n",
     "\n",
-    "            A = choose_action(S, q_table)   # 选行为\n",
-    "            S_, R = get_env_feedback(S, A)  # 实施行为并得到环境的反馈\n",
-    "            q_predict = q_table.ix[S, A]    # 估算的(状态-行为)值\n",
+    "            A = choose_action(S, q_table) \n",
+    "            S_, R = get_env_feedback(S, A) \n",
+    "            q_predict = q_table.ix[S, A] \n",
     "            if S_ != 'terminal':\n",
-    "                q_target = R + GAMMA * q_table.iloc[S_, :].max()   #  实际的(状态-行为)值 (回合没结束)\n",
+    "                q_target = R + GAMMA * q_table.iloc[S_, :].max() \n",
     "            else:\n",
-    "                q_target = R     #  实际的(状态-行为)值 (回合结束)\n",
-    "                is_terminated = True    # terminate this episode\n",
+    "                q_target = R  \n",
+    "                is_terminated = True  \n",
     "\n",
-    "            q_table.ix[S, A] += ALPHA * (q_target - q_predict)  #  q_table 更新\n",
-    "            S = S_  # 探索者移动到下一个 state\n",
+    "            q_table.ix[S, A] += ALPHA * (q_target - q_predict)\n",
+    "            S = S_ \n",
     "\n",
-    "            update_env(S, episode, step_counter+1)  # 环境更新\n",
+    "            update_env(S, episode, step_counter+1) \n",
     "\n",
     "            step_counter += 1\n",
     "    return q_table"
