--- a/Tic_Tac_Toe.ipynb
+++ b/Tic_Tac_Toe.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this notebook, I roughly reimplement Wesley Tansey's rl-tictactoe:\n",
-    "https://github.com/tansey/rl-tictactoe/blob/master/tictactoe.py\n",
-    "\n",
-    "Code released under the MIT license."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -29,7 +19,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "EMPTY = 0\n",
@@ -93,7 +85,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Agent(object):\n",
