--- a/Windy_Grid_World.ipynb
+++ b/Windy_Grid_World.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "Example 6.5: Windy Gridworld\n",
+    "\n",
     "Sutton Book"
    ]
   },
@@ -245,7 +246,7 @@
     "    \n",
     "    n_episode = 1000\n",
     "    ep = 0\n",
-    "    episodes = []a\n",
+    "    episodes = []\n",
     "    sums_of_rewards = []\n",
     "    while ep < n_episode:\n",
     "        if method == 'sarsa':\n",
